guardan palabras de usuario utilizando localStorage

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         cols="4" rows="1" placeholder="Ingrese la palabra a agregar" maxlength="8">
                         <h6 class="indicador"><i class="fa-solid
                                 fa-circle-exclamation"></i> Máx de 8 letras.</h6>
-                        <div class="flex">
+                        <div class="flex h-auto">
                                 <button id="boton-guardar-y-empezar" type="button"
                             class="row btn default-primary-button">Guardar
                             y empezar</button>
@@ -133,5 +133,4 @@
     </body>
     <script src="js/juego.js"></script>
     <script src="js/botones.js"></script>
-
 </html>
